WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195364
REGRESSION (
r238490
): YouTube.com: Returning PiP to Safari after sleeping device loses page
https://bugs.webkit.org/show_bug.cgi?id=195364
Summary
REGRESSION (r238490): YouTube.com: Returning PiP to Safari after sleeping dev...
Chris Dumez
Reported
2019-03-06 10:23:23 PST
View is frozen when resuming Safari after it was force-suspended during PiP.
Attachments
Patch
(1.92 KB, patch)
2019-03-06 10:26 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-03-06 10:23:47 PST
<
rdar://problem/48538837
>
Chris Dumez
Comment 2
2019-03-06 10:26:17 PST
Created
attachment 363755
[details]
Patch
Geoffrey Garen
Comment 3
2019-03-06 10:36:00 PST
Comment on
attachment 363755
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2019-03-06 11:10:11 PST
Comment on
attachment 363755
[details]
Patch Clearing flags on attachment: 363755 Committed
r242554
: <
https://trac.webkit.org/changeset/242554
>
WebKit Commit Bot
Comment 5
2019-03-06 11:10:13 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug