REGRESSION (r238490): YouTube.com: Returning PiP to Safari after sleeping device loses page https://bugs.webkit.org/show_bug.cgi?id=195364 <rdar://problem/48538837>

Reviewed by Geoffrey Garen.

Make sure we unset the LayerTreeFreezeReason::ProcessSuspended layer tree freeze reason
when WebPage::applicationWillEnterForeground() is called. This restores pre-r238490
behavior and addresses the issue with PiP on youtube.com.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::applicationWillEnterForeground):


Canonical link: https://commits.webkit.org/209703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242554 268f45cc-cd09-0410-ab3c-d52691b4dbfc